--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
       rel="stylesheet"
       integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3"
       crossorigin="anonymous">
-    <title>Vite + React + TS</title>
+    <title>CRUD DISCOGRAFIA</title>
   </head>
   <body>
     <div id="root"></div>
